fix: smoothbox style regarding the size of the popup. it changed too much when a folder (for example) had very few items so I established a minimum size for the width and height

--- a/swat/public/default/css/smoothbox.css
+++ b/swat/public/default/css/smoothbox.css
@@ -69,12 +69,15 @@
 #TB_ajaxContent{
 	clear:both;
 	padding:25px;
-	overflow:auto;
+	overflow-y:auto;
 	text-align:left;
 	/*line-height:1.4em;*/
 	width:auto !important;
 	height:auto !important;
 	max-width:600px;
+	min-width:600px;
+	min-height:200px;
+	max-height:400px;
 }
 
 #TB_ajaxContent p{
